commit before resuming assingment

--- a/index.html
+++ b/index.html
@@ -2,11 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&family=Quicksand&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/stylesheet.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>assignment 1</title>
   </head>
   <body>
-<p>hi</p>
+    <div class="take-notes">
+      <h1>My Notes</h1>
+      <ul>
+        <li>note 1</li>
+        <li>note 2</li>
+      </ul>
+    </div>
+    <textarea>      
+Place holder text
+</textarea>
+
   </body>
 </html>
