Implemented all componenets shown in screen shot such as headers, buttons, text area, and the footer imgs. Also added a google font. Applied mininal css to body to try and get a jist of how/what to do next. Alot of expiermenting to see what works.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,18 @@
         <li>note 2</li>
       </ul>
     </div>
+    <h1>Take Better Notes</h1>
+    <button>New Note</button>
+    <button>Dark Theme</button>
+    <button>Cancel</button>
+    <button>Save</button>
     <textarea>      
 Place holder text
 </textarea>
+<footer>
+  <ul><a href = "https://www.linkedin.com/"></a><img src = "https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" alt = "Linkedin">
+    <a href = "https://www.telus.com/en/internet/surrey"></a><img src = "https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png" alt = "Interent Line"></ul>
+</footer>
 
   </body>
 </html>
