--- a/index.html
+++ b/index.html
@@ -11,25 +11,42 @@
     <title>assignment 1</title>
   </head>
   <body>
-    <div class="take-notes">
+    <aside class="take-notes">
       <h1>My Notes</h1>
       <ul>
         <li>note 1</li>
         <li>note 2</li>
       </ul>
-    </div>
-    <h1>Take Better Notes</h1>
-    <button>New Note</button>
-    <button>Dark Theme</button>
-    <button>Cancel</button>
-    <button>Save</button>
-    <textarea>      
+    </aside>
+    <main>
+      <h1>Take Better Notes</h1>
+      <button>New Note</button>
+      <button>Dark Theme</button>
+      <button>Cancel</button>
+      <button>Save</button>
+      <textarea>
+      
 Place holder text
-</textarea>
-<footer>
-  <ul><a href = "https://www.linkedin.com/"></a><img src = "https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" alt = "Linkedin">
-    <a href = "https://www.telus.com/en/internet/surrey"></a><img src = "https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png" alt = "Interent Line"></ul>
-</footer>
-
+</textarea
+      >
+    </main>
+    <footer>
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/"></a
+          ><img
+            src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"
+            alt="Linkedin"
+          />
+        </li>
+        <li>
+          <a href="https://www.telus.com/en/internet/surrey"></a
+          ><img
+            src="https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png"
+            alt="Interent Line"
+          />
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
