Changed grid-template columms to 1fr and 4fr. added aside,footer ul, and footer. Added nav and div to html and add .divclass to css. As of right now i have my aside/sidebar positioned

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>assignment 1</title>
   </head>
   <body>
+    <nav>
     <aside class="take-notes">
       <h1>My Notes</h1>
       <ul>
@@ -18,6 +19,8 @@
         <li>note 2</li>
       </ul>
     </aside>
+    </nav>
+    <div class = "divclass">
     <main>
       <h1>Take Better Notes</h1>
       <button>New Note</button>
@@ -31,12 +34,15 @@ Place holder text
       >
     </main>
     <footer>
+      <p>Keep in touch</p>
       <ul>
         <li>
           <a href="https://www.linkedin.com/"></a
           ><img
             src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"
             alt="Linkedin"
+            height="50px"
+            width="50px"
           />
         </li>
         <li>
@@ -44,9 +50,12 @@ Place holder text
           ><img
             src="https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png"
             alt="Interent Line"
+            height="50px"
+            width="50px"
           />
         </li>
       </ul>
     </footer>
+    </div>
   </body>
 </html>
