moved header take better notes to center of website using flexbox and added colour to it

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
     <div class = "divclass">
     <main>
-      <h1>Take Better Notes</h1>
+      <h1 class = "mainh1">Take Better Notes</h1>
       <button>New Note</button>
       <button>Dark Theme</button>
       <button>Cancel</button>
