aligned the 4 buttons where they should be located using flex box but having difficulty moving textarea into center

--- a/index.html
+++ b/index.html
@@ -23,15 +23,21 @@
     <div class = "divclass">
     <main>
       <h1 class = "mainh1">Take Better Notes</h1>
+      <p class =  "aboutdoc">About Doc</p>
+      <section class = "topbuttons">
       <button>New Note</button>
       <button>Dark Theme</button>
-      <button>Cancel</button>
-      <button>Save</button>
+      </section>
+      
       <textarea>
       
 Place holder text
 </textarea
       >
+      <section class = "bottembuttons">
+      <button>Cancel</button>
+      <button>Save</button>
+      </section>
     </main>
     <footer>
       <p>Keep in touch</p>
