created classes for the buttons in index.html and used those classes to apply styles to the buttons. Put 5px gap in bottembuttons class to give some space between save and cancel and did flex direction row reverse due to cancel coming before save

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class = "divclass">
     <main>
       <h1 class = "mainh1">Take Better Notes</h1>
-      <p class =  "aboutdoc">About Doc</p>
+      <strong><p class =  "aboutdoc">About Doc</p></strong>
       <section class = "topbuttons">
-      <button>New Note</button>
-      <button>Dark Theme</button>
+      <button class = "newnote">New Note</button>
+      <button class = "darktheme">Dark Theme</button>
       </section>
       
       <textarea>
@@ -35,8 +35,8 @@ Place holder text
 </textarea
       >
       <section class = "bottembuttons">
-      <button>Cancel</button>
-      <button>Save</button>
+      <button class = "cancel">Cancel</button>
+      <button class = "save">Save</button>
       </section>
     </main>
     <footer>
