postioned footer and ihe images to the bottem and center of the page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Place holder text
       </section>
     </main>
     <footer>
-      <p>Keep in touch</p>
+      <h1 class = "pfooter">Keep in touch</h1>
       <ul>
         <li>
           <a href="https://www.linkedin.com/"></a
