fixed a href for imgs so they can be clicked and linked to something

--- a/index.html
+++ b/index.html
@@ -42,23 +42,23 @@ Place holder text
     <footer>
       <h1 class = "pfooter">Keep in touch</h1>
       <ul>
-        <li>
-          <a href="https://www.linkedin.com/"></a
-          ><img
-            src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"
+        <li>                  
+          <a href = "https://www.linkedin.com/">
+          <img
+            src = "https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"
             alt="Linkedin"
             height="50px"
             width="50px"
-          />
+          /></a>
         </li>
         <li>
-          <a href="https://www.telus.com/en/internet/surrey"></a
-          ><img
+          <a href ="https://www.telus.com/en/internet/surrey">
+          <img
             src="https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png"
             alt="Interent Line"
             height="50px"
             width="50px"
-          />
+          /></a>
         </li>
       </ul>
     </footer>
