--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class = "divclass">
     <main>
       <h1 class = "mainh1">Take Better Notes</h1>
-      <strong><p class =  "aboutdoc">About Doc</p></strong>
+      <p class =  "aboutdoc"><strong>About Doc</strong></p>
       <section class = "topbuttons">
       <button class = "newnote">New Note</button>
       <button class = "darktheme">Dark Theme</button>
@@ -47,8 +47,8 @@ Place holder text
           <img
             src = "https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"
             alt="Linkedin"
-            height="50px"
-            width="50px"
+            height="50"
+            width="50"
           /></a>
         </li>
         <li>
@@ -56,8 +56,8 @@ Place holder text
           <img
             src="https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png"
             alt="Interent Line"
-            height="50px"
-            width="50px"
+            height="50"
+            width="50"
           /></a>
         </li>
       </ul>
