Made small chnages due to Html having problems semantically

--- a/index.html
+++ b/index.html
@@ -12,56 +12,56 @@
   </head>
   <body>
     <nav>
-    <aside class="take-notes">
-      <h1>My Notes</h1>
-      <ul>
-        <li>note 1</li>
-        <li>note 2</li>
-      </ul>
-    </aside>
+      <aside class="take-notes">
+        <h2>My Notes</h2>
+        <ul>
+          <li>note 1</li>
+          <li>note 2</li>
+        </ul>
+      </aside>
     </nav>
-    <div class = "divclass">
-    <main>
-      <h1 class = "mainh1">Take Better Notes</h1>
-      <p class =  "aboutdoc"><strong>About Doc</strong></p>
-      <section class = "topbuttons">
-      <button class = "newnote">New Note</button>
-      <button class = "darktheme">Dark Theme</button>
-      </section>
-      
-      <textarea>
+    <div class="divclass">
+      <main>
+        <h1 class="mainh1">Take Better Notes</h1>
+        <p class="aboutdoc"><strong>About Doc</strong></p>
+        <div class="topbuttons">
+          <button class="newnote">New Note</button>
+          <button class="darktheme">Dark Theme</button>
+        </div>
+
+        <textarea>
       
 Place holder text
 </textarea
-      >
-      <section class = "bottembuttons">
-      <button class = "cancel">Cancel</button>
-      <button class = "save">Save</button>
-      </section>
-    </main>
-    <footer>
-      <h1 class = "pfooter">Keep in touch</h1>
-      <ul>
-        <li>                  
-          <a href = "https://www.linkedin.com/">
-          <img
-            src = "https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"
-            alt="Linkedin"
-            height="50"
-            width="50"
-          /></a>
-        </li>
-        <li>
-          <a href ="https://www.telus.com/en/internet/surrey">
-          <img
-            src="https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png"
-            alt="Interent Line"
-            height="50"
-            width="50"
-          /></a>
-        </li>
-      </ul>
-    </footer>
+        >
+        <div class="bottembuttons">
+          <button class="cancel">Cancel</button>
+          <button class="save">Save</button>
+        </div>
+      </main>
+      <footer>
+        <h1 class="pfooter">Keep in touch</h1>
+        <ul>
+          <li>
+            <a href="https://www.linkedin.com/">
+              <img
+                src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"
+                alt="Linkedin"
+                height="50"
+                width="50"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.telus.com/en/internet/surrey">
+              <img
+                src="https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png"
+                alt="Interent Line"
+                height="50"
+                width="50"
+            /></a>
+          </li>
+        </ul>
+      </footer>
     </div>
   </body>
 </html>
