created new scripts folder with scripts.js inside. Linked scripts in my index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/stylesheet.css" />
+    <script src="scripts/scripts.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   
     <title>assignment 1</title>
   </head>
   <body>
